# lab6

./: CMakeLists.txt  lab03.txt
.github/workflows/: CI.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt
lab04/.github/workflows/: perf.yml
lab04/formatter_ex_lib/: CMakeLists.txt
lab04/hello_world_application/: CMakeLists.txt
lab04/hello_world_application/_build/: CMakeCache.txt
lab04/solver_application/: CMakeLists.txt
lab04/solver_application/_build/: CMakeCache.txt
solver_application/: CMakeLists.txt  CPack.cmake  equation.cpp  solver.h
