cmake_minimum_required(VERSION 3.4)
project(solver_application)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(${CMAKE_CURRENT_LIST_DIR}/../formatter_ex_lib/CMakeLists.txt)
add_library(solver_lib STATIC ${CMAKE_CURRENT_LIST_DIR}/../solver_lib/solver.cpp)
include_directories(${CMAKE_CURRENT_LIST_DIR}/../solver_lib)
add_executable(solver_application ${CMAKE_CURRENT_LIST_DIR}/equation.cpp)
target_link_libraries(solver_application formatter_ex solver_lib)
include(CPack.cmake)
