cmake_minimum_required(VERSION 3.10)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(${CMAKE_CURRENT_LIST_DIR}/../formatter_lib/CMakeLists.txt)
add_library(formatter_ex STATIC ${CMAKE_CURRENT_LIST_DIR}/formatter_ex.cpp)
target_link_libraries(formatter_ex formatter)
include_directories(${CMAKE_CURRENT_LIST_DIR})
