cmake_minimum_required(VERSION 3.10)
project(solver)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(${CMAKE_CURRENT_LIST_DIR}/../formatter_ex_lib/CMakeLists.txt)
add_library(solver_lib STATIC ${CMAKE_CURRENT_LIST_DIR}/../solver_lib/solver.cpp)
include_directories(/../solver_lib)
add_executable(solver ${CMAKE_CURRENT_LIST_DIR}/equation.cpp)
target_link_libraries(solver formatter_ex solver_lib)
include(CPack.cmake)
